デッキ置き場とめくりサーチ解決待機領域のがっつり定義済 +1h

--- a/領域管理.md
+++ b/領域管理.md
@@ -1,11 +1,85 @@
 デッキ置き場
-カード画像やパラメータを表示しない  
-デッキ領域からは手札領域に移動できる  
-デッキをシャッフルする
-デッキを右クリックすると、n枚ドローするボタンと+-ボタンを表示する。このボタンのnを+-ボタンでnを1以上に増減させ、ドローボタンをクリックするとデッキからカードをドローするをn回やった結果を反映する。
-デッキを右クリックすると、n枚めくるボタンを表示する。+-ボタンとnの値はn枚ドローするボタンと兼用。n枚めくるボタンを押したらデッキの上からn枚をサーチ解決領域にカードを移動させる。
-デッキを右クリックすると、サーチボタンを表示する。デッキに入ってるカードの名前をリスト化し、プルダウンで選択すると対象カードがサーチ解決領域に移動する。
+deck
+カードを配列で所持する
 
+UI周り:
+カード画像やパラメータをUIに表示しない
+カードを重ねて表示する
+配列の大きさでデッキの厚み表現の大小を調整する
+
+上限枚数:無し
+カード種類制限:エネルギー以外
+
+追加情報:無し
+
+入口:
+    控室⇒
+    条件:デッキ置き場の配列が空の状態でドローを試みた時
+    処理:
+        1.控室のカードを全部デッキ置き場に移動する
+        2.デッキ置き場のカードをシャッフルする
+    めくり、サーチ解決待機領域⇒
+    条件:解決待機領域にカードがある状態で解決待機領域にある"このままデッキに戻す"を押したとき
+    処理:originalIndexを基準にデッキに戻す。
+        originalIndexを基準にデッキに戻す。
+        この時、自分の originalIndex より小さい originalIndex を持つカードのうち、解決待機開始後に手札・控室など他の領域へ確定移動し、解決待機領域からなくなっていたカードがある場合、1枚につき戻す番目を-1する。
+        例:5,8,10枚目を解決待機領域に持っていて8枚目を手札置き場に移動した時、デッキの5,10-1枚目の位置に戻す
+        originalIndexが若い順に戻して、デッキ側の同じindexのカードはindex+1することでずらしていく。
+
+出口:
+    ⇒手札
+    条件:ドロー要求時
+    処理:デッキ置き場配列の先頭のカードを1枚手札置き場に加える
+    ⇒めくり、サーチ解決待機領域
+    条件:n枚めくるないしサーチボタン押下時
+    処理:
+        1.移動対象となったカードに、解決待機領域に移動する前のデッキの何番目にいたか(originalIndex)を表すパラメータを追加する。
+        2.対象となったカードを解決待機領域に移動する。
+
+領域メニュー:
+    シャッフル
+    n枚ドロー
+    n枚めくり
+    サーチ
+
+
+めくり、サーチ解決待機領域
+deckResolutionPending
+カードを配列で所持する
+
+UI周り:
+この領域が呼び出されたときモーダルを作成し、このモーダルがある間これ以外の領域にあるカードの移動、他の領域メニューの表示は禁止する。また、この領域のカードは手札置き場にだけスナップする。
+カードは表向きで表示する
+モーダル内にカードを並べる(縦∞横5で右上スタート左下終わり)2行目より大きい、つまり10枚以上あるときスクロールバーを用意してスクロールできるようにする。
+
+上限枚数:無し
+カード種類制限:エネルギー以外
+
+追加情報:解決待機開始時の「デッキの並び」の記録
+
+入口
+    デッキ⇒
+    条件:n枚めくるないしサーチボタン押下時
+    処理:originalIndexを追加して取得する。
+
+出口
+    ⇒手札
+    条件:ユーザーがドラッグして手札置き場にそのカードがスナップされたとき
+    処理:解決待機領域から手札置き場に移動する。
+
+    ⇒控え室
+    条件:すべて控室へボタンを押したとき
+    処理:解決待機領域に残っているカードを全て控え室に移動する。
+
+    ⇒デッキ
+    条件:解決待機領域にカードがある状態で解決待機領域にある"このままデッキに戻す"を押したとき
+    処理:originalIndexを基準にデッキに戻す。
+        originalIndexを基準にデッキに戻す。
+        この時、自分の originalIndex より小さい originalIndex を持つカードのうち、解決待機開始後に手札・控室など他の領域へ確定移動し、解決待機領域からなくなっていたカードがある場合、1枚につき戻す番目を-1する。
+        例:5,8,10枚目を解決待機領域に持っていて8枚目を手札置き場に移動した時、デッキの5,10-1枚目の位置に戻す
+        originalIndexが若い順に戻して、デッキ側の同じindexのカードはindex+1することでずらしていく。
+
+廃棄条件:解決待機領域の配列にカードが0枚になったらモーダル表示を閉じて廃棄する
 
 手札置き場
 手札領域のカードは領域範囲に対して均等な幅で配置される  
