手札の出入口まで

--- a/メモ/領域管理.md
+++ b/メモ/領域管理.md
@@ -82,12 +82,27 @@ UI周り:
 廃棄条件:解決待機領域の配列にカードが0枚になったらモーダル表示を閉じて廃棄する
 
 手札置き場
-手札領域のカードは領域範囲に対して均等な幅で配置される  
-ドラッグ＆ドロップで並び替えを行うことができる
-    カードをドロップした時のカードの中心を選択点として、最も近い距離にある手札のカードの中心を判定し、そのカードの左右どっちにドロップ座標があるか決めて、左にあるなら最も近い距離にある手札のカードの1つ前、右にあるなら最も近い距離にある手札のカードの1つ後に並び変える。
-全ての領域に移動できる
-カードのクリック判定は表示階層に注意し、一番上の階層のものだけ選択されるようにする。
+hand
+カードを配列で所持する
 
+UI周り:
+手札置き場のカードは領域範囲に対して均等な幅で配置される  
+1枚の時は領域範囲の中心に1枚
+2枚以降は領域の左端に1枚、(領域の幅-カード1枚の幅)/カード枚数-1=ずらし座標を行い、左端からずらし座標×〇番目のカード-1で置いていきます。
+ドラッグ＆ドロップで並び替えを行うことができる
+カードをドロップした時のカードの中心を選択点として、最も近い距離にある手札のカードの中心を判定し、そのカードの左右どっちにドロップ座標があるか決めて、左にあるなら最も近い距離にある手札のカードの1つ前、右にあるなら最も近い距離にある手札のカードの1つ後に並び変える。配列の順番が変わったら間隔の再整形を行う
+カードの階層は左端が最も下で1つずつ上に上がってくる重なり方をする
+全ての領域に移動できる
+カードのクリック、ドラッグ判定は表示階層に注意し、一番上の階層のものだけ選択されるようにする。
+
+上限枚数:無し
+カード種類制限:エネルギー以外
+
+追加情報:手札の中で何番目にあるか(配列の並びを参照)
+
+入口
+
+出口
 
 エネルギーデッキ置き場
 残枚数のみ管理  
