一旦手札領域まで追加

--- a/メモ/領域管理.md
+++ b/メモ/領域管理.md
@@ -2,141 +2,144 @@
 deck
 カードを配列で所持する
 
-UI周り:
-カード画像やパラメータをUIに表示しない
+UI 周り:
+カード画像やパラメータを UI に表示しない
 カードを重ねて表示する
 配列の大きさでデッキの厚み表現の大小を調整する
 
 上限枚数:無し
-カード種類制限:エネルギー以外
+カード種類制限:なし
 
 追加情報:無し
 
 入口:
-    控室⇒
-    条件:デッキ置き場の配列が空の状態でドローを試みた時
-    処理:
-        1.控室のカードを全部デッキ置き場に移動する
-        2.デッキ置き場のカードをシャッフルする
-    めくり、サーチ解決待機領域⇒
-    条件:解決待機領域にカードがある状態で解決待機領域にある"このままデッキに戻す"を押したとき
-    処理:originalIndexを基準にデッキに戻す。
-        originalIndexを基準にデッキに戻す。
-        この時、自分の originalIndex より小さい originalIndex を持つカードのうち、解決待機開始後に手札・控室など他の領域へ確定移動し、解決待機領域からなくなっていたカードがある場合、1枚につき戻す番目を-1する。
-        例:5,8,10枚目を解決待機領域に持っていて8枚目を手札置き場に移動した時、デッキの5,10-1枚目の位置に戻す
-        originalIndexが若い順に戻して、デッキ側の同じindexのカードはindex+1することでずらしていく。
+控室 ⇒
+条件:デッキ置き場の配列が空の状態でドローを試みた時
+処理: 1.控室のカードを全部デッキ置き場に移動する 2.デッキ置き場のカードをシャッフルする
+めくり、サーチ解決待機領域 ⇒
+条件:解決待機領域にカードがある状態で解決待機領域にある"このままデッキに戻す"を押したとき
+処理:originalIndex を基準にデッキに戻す。
+この時、自分の originalIndex より小さい originalIndex を持つカードのうち、解決待機開始後に手札・控室など他の領域へ確定移動し、解決待機領域からなくなっていたカードがある場合、1 枚につき戻す番目を-1 する。
+例:5,8,10 枚目を解決待機領域に持っていて 8 枚目を手札置き場に移動した時、デッキの 5,10-1 枚目の位置に戻す
+originalIndex が若い順に戻して、デッキ側の同じ index のカードは index+1 することでずらしていく。
 
 出口:
-    ⇒手札
-    条件:ドロー要求時
-    処理:デッキ置き場配列の先頭のカードを1枚手札置き場に加える
-    ⇒めくり、サーチ解決待機領域
-    条件:n枚めくるないしサーチボタン押下時
-    処理:
-        1.移動対象となったカードに、解決待機領域に移動する前のデッキの何番目にいたか(originalIndex)を表すパラメータを追加する。
-        2.対象となったカードを解決待機領域に移動する。
+⇒ 手札
+条件:ドロー要求時
+処理:デッキ置き場配列の先頭のカードを 1 枚手札置き場に加える
+⇒ めくり、サーチ解決待機領域
+条件:n 枚めくるないしサーチボタン押下時
+処理: 1.移動対象となったカードに、解決待機領域に移動する前のデッキの何番目にいたか(originalIndex)を表すパラメータを追加する。 2.対象となったカードを解決待機領域に移動する。
+
+スナップ受け入れ:なし
 
 領域メニュー:
-    シャッフル
-    n枚ドロー
-    n枚めくり
-    サーチ
-
+シャッフル
+n 枚ドロー
+n 枚めくり
+サーチ
 
 めくり、サーチ解決待機領域
 deckResolutionPending
 カードを配列で所持する
 
-UI周り:
+UI 周り:
 この領域が呼び出されたときモーダルを作成し、このモーダルがある間これ以外の領域にあるカードの移動、他の領域メニューの表示は禁止する。また、この領域のカードは手札置き場にだけスナップする。
 カードは表向きで表示する
-モーダル内にカードを並べる(縦∞横5で右上スタート左下終わり)2行目より大きい、つまり10枚以上あるときスクロールバーを用意してスクロールできるようにする。
+モーダル内にカードを並べる(縦 ∞ 横 5 で右上スタート左下終わり)2 行目より大きい、つまり 10 枚以上あるときスクロールバーを用意してスクロールできるようにする。
 
 上限枚数:無し
-カード種類制限:エネルギー以外
+カード種類制限:なし
 
 追加情報:解決待機開始時の「デッキの並び」の記録
 
 入口
-    デッキ⇒
-    条件:n枚めくるないしサーチボタン押下時
-    処理:originalIndexを追加して取得する。
+デッキ ⇒
+条件:n 枚めくるないしサーチボタン押下時
+処理:originalIndex を追加して取得する。
 
 出口
-    ⇒手札
-    条件:ユーザーがドラッグして手札置き場にそのカードがスナップされたとき
-    処理:解決待機領域から手札置き場に移動する。
+⇒ 手札
+条件:ユーザーがドラッグして手札置き場にそのカードがスナップされたとき
+処理:解決待機領域から手札置き場に移動する。
 
-    ⇒控え室
-    条件:すべて控室へボタンを押したとき
-    処理:解決待機領域に残っているカードを全て控え室に移動する。
+⇒ 控え室
+条件:すべて控室へボタンを押したとき
+処理:解決待機領域に残っているカードを全て控え室に移動する。
 
-    ⇒デッキ
-    条件:解決待機領域にカードがある状態で解決待機領域にある"このままデッキに戻す"を押したとき
-    処理:originalIndexを基準にデッキに戻す。
-        originalIndexを基準にデッキに戻す。
-        この時、自分の originalIndex より小さい originalIndex を持つカードのうち、解決待機開始後に手札・控室など他の領域へ確定移動し、解決待機領域からなくなっていたカードがある場合、1枚につき戻す番目を-1する。
-        例:5,8,10枚目を解決待機領域に持っていて8枚目を手札置き場に移動した時、デッキの5,10-1枚目の位置に戻す
-        originalIndexが若い順に戻して、デッキ側の同じindexのカードはindex+1することでずらしていく。
+⇒ デッキ
+条件:解決待機領域にカードがある状態で解決待機領域にある"このままデッキに戻す"を押したとき
+処理:originalIndex を基準にデッキに戻す。
+originalIndex を基準にデッキに戻す。
+この時、自分の originalIndex より小さい originalIndex を持つカードのうち、解決待機開始後に手札・控室など他の領域へ確定移動し、解決待機領域からなくなっていたカードがある場合、1 枚につき戻す番目を-1 する。
+例:5,8,10 枚目を解決待機領域に持っていて 8 枚目を手札置き場に移動した時、デッキの 5,10-1 枚目の位置に戻す
+originalIndex が若い順に戻して、デッキ側の同じ index のカードは index+1 することでずらしていく。
 
-廃棄条件:解決待機領域の配列にカードが0枚になったらモーダル表示を閉じて廃棄する
+廃棄条件:解決待機領域の配列にカードが 0 枚になったらモーダル表示を閉じて廃棄する
+
+スナップ受け入れ:なし
 
 手札置き場
 hand
 カードを配列で所持する
 
-UI周り:
+UI 周り:
 手札置き場のカードは領域範囲に対して均等な幅で配置される  
-1枚の時は領域範囲の中心に1枚
-2枚以降は領域の左端に1枚、(領域の幅-カード1枚の幅)/カード枚数-1=ずらし座標を行い、左端からずらし座標×〇番目のカード-1で置いていきます。
+1 枚の時は領域範囲の中心に 1 枚
+2 枚以降は領域の左端に 1 枚、(領域の幅-カード 1 枚の幅)/カード枚数-1=ずらし座標を行い、左端からずらし座標 × 〇番目のカード-1 で置いていきます。
 ドラッグ＆ドロップで並び替えを行うことができる
-カードをドロップした時のカードの中心を選択点として、最も近い距離にある手札のカードの中心を判定し、そのカードの左右どっちにドロップ座標があるか決めて、左にあるなら最も近い距離にある手札のカードの1つ前、右にあるなら最も近い距離にある手札のカードの1つ後に並び変える。配列の順番が変わったら間隔の再整形を行う
-カードの階層は左端が最も下で1つずつ上に上がってくる重なり方をする
-全ての領域に移動できる
+カードをドロップした時のカードの中心を選択点として、最も近い距離にある手札のカードの中心を判定し、そのカードの左右どっちにドロップ座標があるか決めて、左にあるなら最も近い距離にある手札のカードの 1 つ前、右にあるなら最も近い距離にある手札のカードの 1 つ後に並び変える。配列の順番が変わったら間隔の再整形を行う
+カードの階層は左端が最も下で 1 つずつ上に上がってくる重なり方をする
+基本全ての領域に移動できる。例外は各領域のスナップ受け入れ条件に従う
 カードのクリック、ドラッグ判定は表示階層に注意し、一番上の階層のものだけ選択されるようにする。
 
 上限枚数:無し
-カード種類制限:エネルギー以外
+カード種類制限:なし
 
 追加情報:手札の中で何番目にあるか(配列の並びを参照)
 
 入口
+デッキ ⇒
+条件:ドロー時
+処理:ドローしたカードを配列の一番後ろに追加
 
 出口
+ドラッグアウト以外ないはず
+
+スナップ受け入れ:あり
 
 エネルギーデッキ置き場
 残枚数のみ管理  
-max12枚
-エネルギーデッキ置き場を右クリックすると、n枚ブーストボタンと+-ボタンを表示する。このボタンのnを+-ボタンでnを1以上に増減させ、ブーストボタンをクリックするとエネルギーデッキ置き場からエネルギー置き場にカードを1枚移動するをn回やった結果を反映する。
-デッキ枚数が0になったら移動できない
+max12 枚
+エネルギーデッキ置き場を右クリックすると、n 枚ブーストボタンと+-ボタンを表示する。このボタンの n を+-ボタンで n を 1 以上に増減させ、ブーストボタンをクリックするとエネルギーデッキ置き場からエネルギー置き場にカードを 1 枚移動するを n 回やった結果を反映する。
+デッキ枚数が 0 になったら移動できない
 
 エネルギー置き場  
-カードの使用状況をTFで管理。Tなら縦向き、Fなら横向き。ユーザー操作(右クリ)でTFの切り替え。  
-ライブ置き場、メンバー置き場の既にカードがある領域にエネルギーカードをドロップした時、そのカードのエネルギーパラメータを+1します。
-
+カードの使用状況を TF で管理。T なら縦向き、F なら横向き。ユーザー操作(右クリ)で TF の切り替え。  
+ライブ置き場、メンバー置き場の既にカードがある領域にエネルギーカードをドロップした時、そのカードのエネルギーパラメータを+1 します。
 
 メンバー置き場
-同名領域×3
-カードの使用状況をTFで管理。Tなら縦向き、Fなら横向き。ユーザー操作(右クリ)でTFの切り替え。  
+同名領域 ×3
+カードの使用状況を TF で管理。T なら縦向き、F なら横向き。ユーザー操作(右クリ)で TF の切り替え。
 
 ライブカード置き場
-同名領域×3
+同名領域 ×3
 このエリアのカードは横向きで置く
 ライブフェイズ以外はこの領域には置けない。
 
 控室領域
-リフレッシュ山札のカードが0枚の時、控え室にあるカードをシャッフルして山札にする処理を挟む。
+リフレッシュ山札のカードが 0 枚の時、控え室にあるカードをシャッフルして山札にする処理を挟む。
 
 解決待機領域
 エールのカウント待ちカードがいる領域
 
 カードの選択  
 右クリックで選択  
-最初に選択したカードと同じ領域のカードだけ追加選択できる  
-  
+最初に選択したカードと同じ領域のカードだけ追加選択できる
+
 コストの自動消費
-手札からメンバー置き場にカードを移動した時、そのカードのコスト分のエネルギーを自動でFにする。足りない時は警告
+手札からメンバー置き場にカードを移動した時、そのカードのコスト分のエネルギーを自動で F にする。足りない時は警告
 もし手札からメンバー置き場に移動するとき、既に対象のメンバー置き場にカードがあり、そのカードがこのターン以外のターンで出たカードならば、コストの差分をコストとして扱い、かつ既にあったカードは捨て札に送る
 
 ドロー  
-デッキ領域の1番上のカードを手札領域に移動する  
+デッキ領域の 1 番上のカードを手札領域に移動する
